docs: rewrite README with architecture and role instructions